# automation

./: .gcloudignore  .gitignore  .~lock.products_export.csv#  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.backup  README.md  STARTUP_GUIDE.md  app.yaml  cloudbuild.yaml  cloudbuild.yaml.backup  deploy-simple.sh  deploy.sh  docker-compose.yml  env.example  exported_products.json  products.json  products_export.json  pyproject.toml  quick-start.sh  requirements.txt  run.py  run.sh  run_service_status.json  start_dev.sh  whatsapp-automation.service  zoko.json  zoko_templates.json
..bfg-report/2025-06-30/00-55-21/: cache-stats.txt  changed-files.txt  object-id-map.old-new.txt
..bfg-report/2025-06-30/00-55-21/protected-dirt/: d4a1db56-HEAD.csv
.cursor/rules/: openai.mdc
.github/workflows/: deploy.yml
.kiro/specs/fix-zoko-upsell-template/: requirements.md  tasks.md
cloud-functions/: requirements.txt
src/: agent_runner.py  api_handler.py  app.py  broadcast.py  cache.py  config.py  db_agent.py  deps.py  deps_fixed.py  gcp.py  gunicorn_conf.py  handoff_tools.py  logger.py  main.py  models.py  openai_agent.py  product_loader.py  product_showcase.py  products.py  requirements.txt  semantic_search.py  semantic_search_and_send.py  shopify_client.py  test.py  tools.py  translation_utils.py  utils.py  zoko_client.py  zoko_utils.py
tests/: test_product_logic.py  test_zoko_interactive_list.py
